added tech guide

--- a/apps.html
+++ b/apps.html
@@ -25,11 +25,11 @@
                 <h2>Tax Computer</h2>
                 <p>Estimate your annual Philippine income tax based on your salary.</p>
             </a>
-            <div class="app-card disabled">
-                <i class="fas fa-hammer"></i>
-                <h2>Crafting Guide</h2>
-                <p>Unlock recipes and boost productivity. Coming soon!</p>
-            </div>
+            <a href="tech-guide.html" class="app-card">
+                <i class="fas fa-lightbulb"></i>
+                <h2>Guide to Tech</h2>
+                <p>Pick an IT job and see the stack to learn with explanations.</p>
+            </a>
         </div>
     </div>
 </body>
