--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                 "Hrmmm.",
                 "A task a day keeps the creepers away.",
                 "Is that a diamond pickaxe?",
-                "Stay safe out there."
+                "Stay safe out there.",
+                "Pangit niyo!"
             ];
 
             // Show speech bubble on click
