--- a/tech-guide.html
+++ b/tech-guide.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body class="apps-page">
+<body class="apps-page tech-guide-page">
     <a href="apps.html" class="apps-button back-button">Back</a>
 
     <div class="container apps-container">
