--- a/apps.html
+++ b/apps.html
@@ -30,6 +30,11 @@
                 <h2>Guide to Tech</h2>
                 <p>Pick an IT job and see the stack to learn with explanations.</p>
             </a>
+            <a href="finance-planning.html" class="app-card">
+                <i class="fas fa-coins"></i>
+                <h2>Finance Planning</h2>
+                <p>Compute monthly payments, total interest, and amortization for PH loans.</p>
+            </a>
         </div>
     </div>
 </body>
