added future dund

--- a/apps.html
+++ b/apps.html
@@ -35,6 +35,11 @@
                 <h2>Finance Planning</h2>
                 <p>Compute monthly payments, total interest, and amortization for PH loans.</p>
             </a>
+            <a href="future-fund-forecaster.html" class="app-card">
+                <i class="fas fa-chart-line"></i>
+                <h2>Future Fund Forecaster</h2>
+                <p>Estimate monthly saving needed to reach a goal, factoring inflation and returns.</p>
+            </a>
         </div>
     </div>
 </body>
