--- a/apps.html
+++ b/apps.html
@@ -37,8 +37,8 @@
             </a>
             <a href="future-fund-forecaster.html" class="app-card">
                 <i class="fas fa-chart-line"></i>
-                <h2>Future Fund Forecaster</h2>
-                <p>Estimate monthly saving needed to reach a goal, factoring inflation and returns.</p>
+                <h2>Personal Savings Planner</h2>
+                <p>Figure out how much to save each month to hit your goal by a target date.</p>
             </a>
         </div>
     </div>
