--- a/apps.html
+++ b/apps.html
@@ -40,6 +40,11 @@
                 <h2>Personal Savings Planner</h2>
                 <p>Figure out how much to save each month to hit your goal by a target date.</p>
             </a>
+            <a href="tagalog-wordle.html" class="app-card">
+                <i class="fas fa-language"></i>
+                <h2>Salitang Hulaan</h2>
+                <p>Tagalog Wordle - Hulaan ang 5-letrang salita sa anim na pagsubok!</p>
+            </a>
         </div>
     </div>
 </body>
