--- a/apps.html
+++ b/apps.html
@@ -40,6 +40,11 @@
                 <h2>Personal Savings Planner</h2>
                 <p>Figure out how much to save each month to hit your goal by a target date.</p>
             </a>
+            <a href="pdf-to-word.html" class="app-card">
+                <i class="fas fa-file-word"></i>
+                <h2>PDF to Word Converter</h2>
+                <p>Turn any PDF into an editable Word document, all inside your browser.</p>
+            </a>
             <a href="tagalog-wordle.html" class="app-card">
                 <i class="fas fa-language"></i>
                 <h2>Salitang Hulaan</h2>
