--- a/pdf-to-word.html
+++ b/pdf-to-word.html
@@ -52,9 +52,9 @@
     </section>
   </div>
 
-  <script src="https://unpkg.com/pdfjs-dist@3.11.174/build/pdf.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://unpkg.com/pdfjs-dist@3.11.174/build/pdf.worker.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://unpkg.com/docx@8.3.0/build/docx.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.11.174/build/pdf.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.11.174/build/pdf.worker.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/docx@8.3.0/build/index.umd.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
     (function () {
       const fileInput = document.getElementById('pdfFile');
@@ -74,7 +74,7 @@
         return;
       }
 
-      pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://unpkg.com/pdfjs-dist@3.11.174/build/pdf.worker.min.js';
+      pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdn.jsdelivr.net/npm/pdfjs-dist@3.11.174/build/pdf.worker.min.js';
 
       if (!window.docx) {
         console.error('docx library failed to load');
